--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Dec 19 2022 15:14:16 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Dec 19 2022 18:49:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63a0798c30164e930df21496" data-wf-site="63a0798c30164e0ad3f2148b">
 <head>
   <meta charset="utf-8">
@@ -75,7 +75,7 @@
         <div id="w-node-e81489c4-6bf5-59ef-709e-34eaa3e969a7-0df21496" class="grid-element-middle"><img src="images/sophie-sketch.png" loading="lazy" alt="" class="portrait-vector"></div>
         <div id="w-node-e81489c4-6bf5-59ef-709e-34eaa3e969a9-0df21496" class="grid-element-middle">
           <div class="intro-p-wrap">
-            <h1 class="title-heading">Werkschau Sophie Kremer</h1>
+            <h1 class="title-heading">Werkschau <br><span class="text-span">Sophie Kremer</span></h1>
             <h1 class="intro-p">This showcase is a selection of projects I created during my studies of Interface Design at the University of Applied Sciences Potsdam.</h1>
           </div>
         </div>
@@ -87,27 +87,6 @@
       <div class="content-div">
         <div class="projects-heading-div-left">
           <h1 class="project-heading2">Projects</h1>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="section-project wf-section">
-    <div class="container w-container">
-      <div class="content-div">
-        <div class="image-wrap"><img src="images/overview-ah-middle.png" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 991px) 90vw, 840px" srcset="images/overview-ah-middle.png 500w, images/overview-ah-middle.png 800w, images/overview-ah-middle.png 1080w, images/overview-ah-middle.png 1600w, images/overview-ah-middle.png 2135w" alt="Title image for the project AlongHealth. Showing mockups of the web-app and mobile app, with a light blue background" class="image"></div>
-        <div class="project-title-div">
-          <h1 class="project-title">AlongHealth:</h1>
-          <div class="project-line">Digital remote patient care</div>
-        </div>
-        <div class="subtext-project">
-          <div class="project-caption">Internship<span class="caption-span">•</span>Amandine Boisseaux, Macarena Tichauer &amp; Sophie Kremer<span class="caption-span">•</span>2022</div>
-        </div>
-        <div class="div-button">
-          <a data-w-id="0f38f095-f570-ba6d-ec21-3ba736a92168" href="projects/periodeux.html" class="button-link bg-along w-inline-block">
-            <div class="project-button-p">View Project</div>
-            <div data-w-id="0f38f095-f570-ba6d-ec21-3ba736a9216b" class="arrow-line-wrap"><img src="images/longer-line-arrwo.svg" loading="lazy" alt=""></div>
-            <div class="arrow-wrap"><img src="images/arrow.svg" loading="lazy" alt=""></div>
-          </a>
         </div>
       </div>
     </div>
@@ -136,6 +115,46 @@
   <div class="section-project wf-section">
     <div class="container w-container">
       <div class="content-div">
+        <div class="image-wrap"><img src="images/overview-ah-middle.png" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 991px) 90vw, 840px" srcset="images/overview-ah-middle-p-500.png 500w, images/overview-ah-middle-p-800.png 800w, images/overview-ah-middle-p-1080.png 1080w, images/overview-ah-middle-p-1600.png 1600w, images/overview-ah-middle.png 2135w" alt="Title image for the project AlongHealth. Showing mockups of the web-app and mobile app, with a light blue background" class="image"></div>
+        <div class="project-title-div">
+          <h1 class="project-title">AlongHealth:</h1>
+          <div class="project-line">Digital remote patient care</div>
+        </div>
+        <div class="subtext-project">
+          <div class="project-caption">Internship<span class="caption-span">•</span>Amandine Boisseaux, Macarena Tichauer &amp; Sophie Kremer<span class="caption-span">•</span>2022</div>
+        </div>
+        <div class="div-button">
+          <a data-w-id="0f38f095-f570-ba6d-ec21-3ba736a92168" href="projects/alonghealth.html" class="button-link bg-along w-inline-block">
+            <div class="project-button-p">View Project</div>
+            <div data-w-id="0f38f095-f570-ba6d-ec21-3ba736a9216b" class="arrow-line-wrap"><img src="images/longer-line-arrwo.svg" loading="lazy" alt=""></div>
+            <div class="arrow-wrap"><img src="images/arrow.svg" loading="lazy" alt=""></div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="section-project wf-section">
+    <div class="container w-container">
+      <div class="content-div">
+        <div class="image-wrap"><img src="images/shop-overview.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 991px) 90vw, 840px" srcset="images/SHOP-ÜBERSICHT_-mixed-noise2-p-500.jpeg 500w, images/SHOP-ÜBERSICHT_-mixed-noise2-p-800.jpeg 800w, images/shop-overview.jpg 1920w" alt="" class="image"></div>
+        <div class="project-title-div">
+          <h1 class="project-title">Health Fiction 2047:</h1>
+          <div class="project-line">Between Utopia and Dystopia</div>
+        </div>
+        <div class="project-caption">Speculative Design<span class="caption-span">•</span>Anne Bansen, Bettina Fink &amp; Sophie Kremer<span class="caption-span">•</span>2021</div>
+        <div class="div-button">
+          <a data-w-id="f1c9138f-d8f4-380c-63bf-b868eadc6ebe" href="projects/healthfiction.html" class="button-link bg-health w-inline-block">
+            <div class="project-button-p">View Project</div>
+            <div data-w-id="f1c9138f-d8f4-380c-63bf-b868eadc6ec1" class="arrow-line-wrap"><img src="images/longer-line-arrwo.svg" loading="lazy" alt=""></div>
+            <div class="arrow-wrap"><img src="images/arrow.svg" loading="lazy" alt=""></div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="section-project wf-section">
+    <div class="container w-container">
+      <div class="content-div">
         <div class="image-wrap"><img src="images/Mask-Group-2.png" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 991px) 90vw, 840px" srcset="images/Mask-Group-2-p-500.png 500w, images/Mask-Group-2.png 1251w" alt="" class="image"></div>
         <div class="project-title-div">
           <h1 class="project-title">Let’s Clear the Air:</h1>
@@ -146,25 +165,6 @@
           <a data-w-id="ade53334-0d29-13c7-7e1e-c5cae2192952" href="projects/letscleartheair.html" class="button-link bg-klima w-inline-block">
             <div class="project-button-p">View Project</div>
             <div data-w-id="658291b1-d2c9-9cc4-0911-093b88b3ab11" class="arrow-line-wrap"><img src="images/longer-line-arrwo.svg" loading="lazy" alt=""></div>
-            <div class="arrow-wrap"><img src="images/arrow.svg" loading="lazy" alt=""></div>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="section-project wf-section">
-    <div class="container w-container">
-      <div class="content-div">
-        <div class="image-wrap"><img src="images/SHOP-ÜBERSICHT_-mixed-noise2.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 991px) 90vw, 840px" srcset="images/SHOP-ÜBERSICHT_-mixed-noise2-p-500.jpeg 500w, images/SHOP-ÜBERSICHT_-mixed-noise2-p-800.jpeg 800w, images/SHOP-ÜBERSICHT_-mixed-noise2.jpg 1920w" alt="" class="image"></div>
-        <div class="project-title-div">
-          <h1 class="project-title">Health Fiction 2047:</h1>
-          <div class="project-line">Between Utopia and Dystopia</div>
-        </div>
-        <div class="project-caption">Speculative Design<span class="caption-span">•</span>Anne Bansen, Bettina Fink &amp; Sophie Kremer<span class="caption-span">•</span>2021</div>
-        <div class="div-button">
-          <a data-w-id="f1c9138f-d8f4-380c-63bf-b868eadc6ebe" href="projects/healthfiction.html" class="button-link bg-health w-inline-block">
-            <div class="project-button-p">View Project</div>
-            <div data-w-id="f1c9138f-d8f4-380c-63bf-b868eadc6ec1" class="arrow-line-wrap"><img src="images/longer-line-arrwo.svg" loading="lazy" alt=""></div>
             <div class="arrow-wrap"><img src="images/arrow.svg" loading="lazy" alt=""></div>
           </a>
         </div>
