--- a/projects/alonghealth.html
+++ b/projects/alonghealth.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Dec 19 2022 15:14:16 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Dec 19 2022 18:49:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63a0798c30164ee642f21498" data-wf-site="63a0798c30164e0ad3f2148b">
 <head>
   <meta charset="utf-8">
@@ -69,7 +69,7 @@
   </div>
   <div class="section-title-photo wf-section">
     <div class="container-2 w-container">
-      <div class="image-wrap-copy"><img src="../images/new-cover-ah.png" loading="lazy" sizes="(max-width: 1279px) 100vw, 1000px" srcset="../images/new-cover-ah.png 500w, ../images/new-cover-ah.png 800w, ../images/new-cover-ah.png 1080w, ../images/new-cover-ah.png 2135w" alt="A Title image, showing the web app and mobile app in front of a blue background." class="image">
+      <div class="image-wrap2"><img src="../images/new-cover-ah.png" loading="lazy" sizes="(max-width: 1279px) 100vw, 1000px" srcset="../images/new-cover-ah-p-500.png 500w, ../images/new-cover-ah-p-800.png 800w, ../images/new-cover-ah-p-1080.png 1080w, ../images/new-cover-ah.png 2135w" alt="A Title image, showing the web app and mobile app in front of a blue background." class="image">
         <h1 class="h1-alonghealth">AlongHealth</h1>
       </div>
     </div>
@@ -107,7 +107,7 @@
   <div class="section-15 bg-alonghealth2 wf-section">
     <div class="container w-container">
       <div class="grid-one-picture-no-margin">
-        <div id="w-node-_76d372cd-3bc1-65bf-f24a-32bc822c71ab-42f21498" class="grid-element"><img src="../images/Old-vs-new-website-AH.png" loading="lazy" sizes="(max-width: 479px) 87vw, 100vw" srcset="../images/Old-vs-new-website-AH.png 500w, ../images/Old-vs-new-website-AH.png 800w, ../images/Old-vs-new-website-AH.png 1080w, ../images/Old-vs-new-website-AH.png 1600w, ../images/Old-vs-new-website-AH.png 2933w" alt="A comparison between two versions of the website, one before and the other after the redesign." class="image-shrink-stretch"></div>
+        <div id="w-node-_76d372cd-3bc1-65bf-f24a-32bc822c71ab-42f21498" class="grid-element"><img src="../images/Old-vs-new-website-AH.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 991px) 90vw, 840px" srcset="../images/Old-vs-new-website-AH-p-500.png 500w, ../images/Old-vs-new-website-AH-p-800.png 800w, ../images/Old-vs-new-website-AH-p-1080.png 1080w, ../images/Old-vs-new-website-AH-p-1600.png 1600w, ../images/Old-vs-new-website-AH.png 2933w" alt="A comparison between two versions of the website, one before and the other after the redesign." class="image-shrink-stretch"></div>
       </div>
     </div>
   </div>
@@ -175,10 +175,10 @@
   <div class="section-15-0 wf-section">
     <div class="container w-container">
       <div class="grid-four-pictures-ww-ww">
-        <div id="w-node-_1cc6944b-dc3f-e057-3baa-d22a53dea967-42f21498" class="grid-element"><img src="../images/Patient-List-midfidelity.png" loading="lazy" sizes="1vw" srcset="../images/Patient-List-midfidelity-p-500.png 500w, ../images/Patient-List-midfidelity-p-800.png 800w, ../images/Patient-List-midfidelity.png 1280w" alt="An image of the mid-fidelity prototype version of the patient list in the web app, showing a list of patient sorted by name" class="image-with-round-border"></div>
-        <div id="w-node-_5ae7e4e7-9c36-bbdd-7dea-e8d6e9f0db92-42f21498" class="grid-element"><img src="../images/dashboard-midfidelity.png" loading="lazy" sizes="1vw" srcset="../images/dashboard-midfidelity-p-500.png 500w, ../images/dashboard-midfidelity-p-800.png 800w, ../images/dashboard-midfidelity-p-1080.png 1080w, ../images/dashboard-midfidelity.png 1280w" alt="Image of the mid-fidelity verision of the design of the dashboard, showing patient information and their vitals." class="image-with-round-border"></div>
-        <div id="w-node-fc3ccbf7-e775-0a7d-eae3-b69bfd577725-42f21498" class="grid-element"><img src="../images/profile-midefidelity.png" loading="lazy" sizes="1vw" srcset="../images/profile-midefidelity-p-500.png 500w, ../images/profile-midefidelity-p-800.png 800w, ../images/profile-midefidelity-p-1080.png 1080w, ../images/profile-midefidelity.png 1280w" alt="An image of the mid-fidelity prototype version of the patient profile, showing personal data about the patient." class="image-with-round-border"></div>
-        <div id="w-node-a0b3b76a-0053-34eb-15ac-84838cc0f2ae-42f21498" class="grid-element"><img src="../images/files-midfidelity.png" loading="lazy" sizes="1vw" srcset="../images/files-midfidelity-p-500.png 500w, ../images/files-midfidelity-p-800.png 800w, ../images/files-midfidelity-p-1080.png 1080w, ../images/files-midfidelity.png 1280w" alt="Image of the mid-fidelity prototype version of the file screen in the web app, showing questionnaires, wound pictures an.d other documents" class="image-with-round-border"></div>
+        <div id="w-node-_1cc6944b-dc3f-e057-3baa-d22a53dea967-42f21498" class="grid-element"><img src="../images/Patient-List-midfidelity.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 991px) 44vw, 412px" srcset="../images/Patient-List-midfidelity-p-500.png 500w, ../images/Patient-List-midfidelity-p-800.png 800w, ../images/Patient-List-midfidelity.png 1280w" alt="An image of the mid-fidelity prototype version of the patient list in the web app, showing a list of patient sorted by name" class="image-with-round-border-along"></div>
+        <div id="w-node-_5ae7e4e7-9c36-bbdd-7dea-e8d6e9f0db92-42f21498" class="grid-element"><img src="../images/dashboard-midfidelity.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 991px) 44vw, 412px" srcset="../images/dashboard-midfidelity-p-500.png 500w, ../images/dashboard-midfidelity-p-800.png 800w, ../images/dashboard-midfidelity-p-1080.png 1080w, ../images/dashboard-midfidelity.png 1280w" alt="Image of the mid-fidelity verision of the design of the dashboard, showing patient information and their vitals." class="image-with-round-border-along"></div>
+        <div id="w-node-fc3ccbf7-e775-0a7d-eae3-b69bfd577725-42f21498" class="grid-element"><img src="../images/profile-midefidelity.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 991px) 44vw, 412px" srcset="../images/profile-midefidelity-p-500.png 500w, ../images/profile-midefidelity-p-800.png 800w, ../images/profile-midefidelity-p-1080.png 1080w, ../images/profile-midefidelity.png 1280w" alt="An image of the mid-fidelity prototype version of the patient profile, showing personal data about the patient." class="image-with-round-border-along"></div>
+        <div id="w-node-a0b3b76a-0053-34eb-15ac-84838cc0f2ae-42f21498" class="grid-element"><img src="../images/files-midfidelity.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 991px) 44vw, 412px" srcset="../images/files-midfidelity-p-500.png 500w, ../images/files-midfidelity-p-800.png 800w, ../images/files-midfidelity-p-1080.png 1080w, ../images/files-midfidelity.png 1280w" alt="Image of the mid-fidelity prototype version of the file screen in the web app, showing questionnaires, wound pictures an.d other documents" class="image-with-round-border-along"></div>
       </div>
     </div>
   </div>
@@ -207,14 +207,14 @@
   <div class="section-3 bg-alonghealth wf-section">
     <div class="container w-container">
       <div class="grid-one-picture-no-margin">
-        <div id="w-node-_20adf39c-c268-44c8-f3be-d4403618bb02-42f21498" class="grid-element"><img src="../images/vitalsigns-tiles.png" loading="lazy" sizes="(max-width: 479px) 87vw, 100vw" srcset="../images/vitalsigns-tiles-p-500.png 500w, ../images/vitalsigns-tiles-p-800.png 800w, ../images/vitalsigns-tiles.png 1490w" alt="A visual that includes all the tiles that were designed to show the different vital parameters  and symptoms of the patient." class="image-shrink-stretch"></div>
+        <div id="w-node-_20adf39c-c268-44c8-f3be-d4403618bb02-42f21498" class="grid-element"><img src="../images/vitalsigns-tiles.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 991px) 90vw, 840px" srcset="../images/vitalsigns-tiles-p-500.png 500w, ../images/vitalsigns-tiles-p-800.png 800w, ../images/vitalsigns-tiles.png 1490w" alt="A visual that includes all the tiles that were designed to show the different vital parameters  and symptoms of the patient." class="image-shrink-stretch"></div>
       </div>
     </div>
   </div>
   <div class="section-15 wf-section">
     <div class="container w-container">
       <div class="grid-one-picture-no-margin">
-        <div id="w-node-_6574e7df-f302-9c37-7b55-5e26bcb2352a-42f21498" class="grid-element"><img src="../images/Patient-List-final.png" loading="lazy" sizes="(max-width: 479px) 87vw, 1vw" srcset="../images/Patient-List-final-p-500.png 500w, ../images/Patient-List-final.png 1280w" alt="A screen in the web app, showing a list of patient sorted by name" class="image-with-round-border"></div>
+        <div id="w-node-_6574e7df-f302-9c37-7b55-5e26bcb2352a-42f21498" class="grid-element"><img src="../images/Patient-List-final.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 991px) 90vw, 840px" srcset="../images/Patient-List-final-p-500.png 500w, ../images/Patient-List-final.png 1280w" alt="A screen in the web app, showing a list of patient sorted by name" class="image-with-round-border-along"></div>
       </div>
     </div>
   </div>
@@ -230,7 +230,7 @@
   <div class="section-15 wf-section">
     <div class="container w-container">
       <div class="grid-one-picture-no-margin">
-        <div id="w-node-f83aad5e-9745-9df4-5132-bc226115825a-42f21498" class="grid-element"><img src="../images/Dashboard-final.png" loading="lazy" sizes="(max-width: 479px) 87vw, 1vw" srcset="../images/Dashboard-final-p-500.png 500w, ../images/Dashboard-final.png 1280w" alt="Image of the design of the dashboard, showing patient information and their vitals." class="image-with-round-border"></div>
+        <div id="w-node-f83aad5e-9745-9df4-5132-bc226115825a-42f21498" class="grid-element"><img src="../images/Dashboard-final.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 991px) 90vw, 840px" srcset="../images/Dashboard-final-p-500.png 500w, ../images/Dashboard-final.png 1280w" alt="Image of the design of the dashboard, showing patient information and their vitals." class="image-with-round-border-along"></div>
       </div>
     </div>
   </div>
@@ -246,7 +246,7 @@
   <div class="section-15 wf-section">
     <div class="container w-container">
       <div class="grid-one-picture-no-margin">
-        <div id="w-node-fca30da4-7d2c-a296-9ac2-ca42fed91df0-42f21498" class="grid-element"><img src="../images/files-final.png" loading="lazy" sizes="(max-width: 479px) 87vw, 1vw" srcset="../images/files-final-p-500.png 500w, ../images/files-final-p-800.png 800w, ../images/files-final.png 1280w" alt="Image of the file screen in the web app, showing questionnaires, wound pictures an.d other documents" class="image-with-round-border"></div>
+        <div id="w-node-fca30da4-7d2c-a296-9ac2-ca42fed91df0-42f21498" class="grid-element"><img src="../images/files-final.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 991px) 90vw, 840px" srcset="../images/files-final-p-500.png 500w, ../images/files-final-p-800.png 800w, ../images/files-final.png 1280w" alt="Image of the file screen in the web app, showing questionnaires, wound pictures an.d other documents" class="image-with-round-border-along"></div>
       </div>
     </div>
   </div>
@@ -263,7 +263,7 @@
   <div class="section-3 bg-alonghealth2 wf-section">
     <div class="container w-container">
       <div class="grid-one-picture-no-margin">
-        <div id="w-node-_171466d8-f504-7c65-03ca-f0bcceb612f7-42f21498" class="grid-element"><img src="../images/bigger-visuals-AH.png" loading="lazy" sizes="(max-width: 479px) 87vw, 100vw" srcset="../images/bigger-visuals-AH.png 500w, ../images/bigger-visuals-AH.png 800w, ../images/bigger-visuals-AH.png 1080w, ../images/bigger-visuals-AH.png 1600w, ../images/bigger-visuals-AH.png 2439w" alt="A summary of multiple visuals used in the web-ap and app." class="image-shrink-stretch"></div>
+        <div id="w-node-_171466d8-f504-7c65-03ca-f0bcceb612f7-42f21498" class="grid-element"><img src="../images/bigger-visuals-AH.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 991px) 90vw, 840px" srcset="../images/bigger-visuals-AH-p-500.png 500w, ../images/bigger-visuals-AH-p-800.png 800w, ../images/bigger-visuals-AH-p-1080.png 1080w, ../images/bigger-visuals-AH-p-1600.png 1600w, ../images/bigger-visuals-AH.png 2439w" alt="A summary of multiple visuals used in the web-ap and app." class="image-shrink-stretch"></div>
       </div>
     </div>
   </div>
@@ -298,7 +298,7 @@
   <div class="section-3 bg-alonghealth wf-section">
     <div class="container w-container">
       <div class="grid-three-pictures-www">
-        <div id="w-node-decd0b4d-4919-f462-c925-61d4f6cec39a-42f21498" class="grid-element"><img src="../images/learn-comparison-Ah.png" loading="lazy" sizes="100vw" srcset="../images/learn-comparison-Ah.png 500w, ../images/learn-comparison-Ah.png 810w" alt="A comparison between the mobile app screens of the article overview in learn." class="image-shrink-stretch"></div>
+        <div id="w-node-decd0b4d-4919-f462-c925-61d4f6cec39a-42f21498" class="grid-element"><img src="../images/learn-comparison-Ah.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, 269.328125px" srcset="../images/learn-comparison-Ah-p-500.png 500w, ../images/learn-comparison-Ah.png 810w" alt="A comparison between the mobile app screens of the article overview in learn." class="image-shrink-stretch"></div>
         <div id="w-node-_63adc883-06a8-b566-1582-242093feeb20-42f21498" class="grid-element"><img src="../images/care-comparison-ah.png" loading="lazy" alt="A comparison between the mobile app screens of the care tab with a timeline." class="image-shrink-stretch"></div>
         <div id="w-node-_332a3c69-b3a1-a5d3-40e5-011a82f3f0f2-42f21498" class="grid-element"><img src="../images/article-comparison-ah.png" loading="lazy" alt="A comparison between the mobile app screens of an article." class="image-shrink-stretch"></div>
       </div>
