--- a/projects/eton.html
+++ b/projects/eton.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Dec 19 2022 15:14:16 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Dec 19 2022 18:49:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63a0798c30164e7396f2149a" data-wf-site="63a0798c30164e0ad3f2148b">
 <head>
   <meta charset="utf-8">
@@ -69,7 +69,7 @@
   </div>
   <div class="section-title-photo wf-section">
     <div class="container-2 w-container">
-      <div class="image-wrap-copy"><img src="../images/_A0A1897-6-short.jpg" loading="lazy" alt="" class="image">
+      <div class="image-wrap2"><img src="../images/eton-title-short.jpg" loading="lazy" alt="" class="image">
         <h1 class="h1-eton">ETON</h1>
       </div>
     </div>
@@ -151,17 +151,17 @@
   <div class="section-15 wf-section">
     <div class="container-wide w-container">
       <div class="grid-twotwo-pictures-copy">
-        <div id="w-node-bc85212d-45d9-90d8-6037-d744d879d55f-96f2149a" class="grid-element"><img src="../images/_A0A1847-2.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 1279px) 9vw, 115.5546875px" srcset="../images/_A0A1847-2-p-800.jpeg 800w, ../images/_A0A1847-2.jpg 1000w" alt="" class="grid-image-flexible"></div>
-        <div id="w-node-bc85212d-45d9-90d8-6037-d744d879d561-96f2149a" class="grid-element"><img src="../images/_A0A1865-4.jpg" loading="lazy" alt="" class="grid-image-flexible"></div>
-        <div id="w-node-bc85212d-45d9-90d8-6037-d744d879d563-96f2149a" class="grid-element"><img src="../images/_A0A1930-2.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 1279px) 9vw, 115.5546875px" srcset="../images/_A0A1930-2-p-800.jpeg 800w, ../images/_A0A1930-2.jpg 1000w" alt="" class="grid-image-flexible"></div>
-        <div id="w-node-bc85212d-45d9-90d8-6037-d744d879d565-96f2149a" class="grid-element"><img src="../images/_A0A1874-2.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 18vw, (max-width: 1279px) 19vw, 231.109375px" srcset="../images/_A0A1874-2-p-800.jpeg 800w, ../images/_A0A1874-2.jpg 1000w" alt="" class="grid-image-flexible"></div>
+        <div id="w-node-bc85212d-45d9-90d8-6037-d744d879d55f-96f2149a" class="grid-element"><img src="../images/eton-profile.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 1279px) 9vw, 115.5546875px" srcset="../images/eton-profile-p-800.jpeg 800w, ../images/eton-profile.jpg 1000w" alt="" class="grid-image-flexible"></div>
+        <div id="w-node-bc85212d-45d9-90d8-6037-d744d879d561-96f2149a" class="grid-element"><img src="../images/eton-open.jpg" loading="lazy" alt="" class="grid-image-flexible"></div>
+        <div id="w-node-bc85212d-45d9-90d8-6037-d744d879d563-96f2149a" class="grid-element"><img src="../images/eton-blue.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 1279px) 9vw, 115.5546875px" srcset="../images/eton-blue-p-800.jpeg 800w, ../images/eton-blue.jpg 1000w" alt="" class="grid-image-flexible"></div>
+        <div id="w-node-bc85212d-45d9-90d8-6037-d744d879d565-96f2149a" class="grid-element"><img src="../images/eton-open-bird.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 18vw, (max-width: 1279px) 19vw, 231.109375px" srcset="../images/eton-open-bird-p-800.jpeg 800w, ../images/eton-open-bird.jpg 1000w" alt="" class="grid-image-flexible"></div>
       </div>
     </div>
   </div>
   <div class="section-15 wf-section">
     <div class="container-wide w-container">
       <div class="project-quote-wrap">
-        <div class="arow-wrap"><img src="../images/quote-eton_1quote-eton.png" loading="lazy" alt=""></div>
+        <div class="arow-wrap"><img src="../images/eton-quote-mark.svg" loading="lazy" alt=""></div>
         <p class="project-quote"><span class="eton-quote-span">ETON</span> enables the end-user to take comfortable action, until further political steps have been implemented.</p>
       </div>
     </div>
@@ -170,8 +170,8 @@
     <div class="container-wide w-container">
       <div class="grid-three-pictures-wnn">
         <div id="w-node-e5467229-f15b-c863-7adb-385ff1def012-96f2149a" class="grid-element"><img src="../images/shell-open.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 43vw, (max-width: 1279px) 44vw, 544px" srcset="../images/shell-open-p-1080.jpeg 1080w, ../images/shell-open-p-1600.jpeg 1600w, ../images/shell-open-p-2000.jpeg 2000w, ../images/shell-open.jpg 2075w" alt="" class="image-grow-stretch"></div>
-        <div id="w-node-e5467229-f15b-c863-7adb-385ff1def014-96f2149a" class="grid-element"><img src="../images/_A0A1871.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 21vw, (max-width: 1279px) 22vw, 272px" srcset="../images/_A0A1871-p-800.jpeg 800w, ../images/_A0A1871.jpg 1000w" alt="" class="image-grow-stretch"></div>
-        <div id="w-node-e5467229-f15b-c863-7adb-385ff1def016-96f2149a" class="grid-element"><img src="../images/_A0A1869.jpg" loading="lazy" alt="" class="image-shrink-stretch"></div>
+        <div id="w-node-e5467229-f15b-c863-7adb-385ff1def014-96f2149a" class="grid-element"><img src="../images/eton-open-left.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 21vw, (max-width: 1279px) 22vw, 272px" srcset="../images/eton-open-left-p-800.jpeg 800w, ../images/eton-open-left.jpg 1000w" alt="" class="image-grow-stretch"></div>
+        <div id="w-node-e5467229-f15b-c863-7adb-385ff1def016-96f2149a" class="grid-element"><img src="../images/eton-trash.jpg" loading="lazy" alt="" class="image-shrink-stretch"></div>
       </div>
     </div>
   </div>
@@ -189,7 +189,7 @@
       <div class="grid-three-pictures-swn">
         <div id="w-node-_865892ac-22f1-9579-d98d-5a4655c5451c-96f2149a" class="grid-element"><img src="../images/shell-open2.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 28vw, (max-width: 1279px) 30vw, 362.6640625px" srcset="../images/shell-open2-p-1080.jpeg 1080w, ../images/shell-open2-p-1600.jpeg 1600w, ../images/shell-open2.jpg 2000w" alt="" class="grid-image-flexible"></div>
         <div id="w-node-_865892ac-22f1-9579-d98d-5a4655c5451e-96f2149a" class="grid-element"><img src="../images/Technik1-wide.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 38vw, (max-width: 1279px) 39vw, 483.5546875px" srcset="../images/Technik1-wide-p-500.jpeg 500w, ../images/Technik1-wide-p-800.jpeg 800w, ../images/Technik1-wide-p-1080.jpeg 1080w, ../images/Technik1-wide.jpg 1500w" alt="" class="grid-image-flexible"></div>
-        <div id="w-node-_865892ac-22f1-9579-d98d-5a4655c54520-96f2149a" class="grid-element"><img src="../images/_A0A1902-2.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 19vw, (max-width: 1279px) 20vw, 241.78125px" srcset="../images/_A0A1902-2-p-500.jpeg 500w, ../images/_A0A1902-2.jpg 1000w" alt="" class="grid-image-flexible"></div>
+        <div id="w-node-_865892ac-22f1-9579-d98d-5a4655c54520-96f2149a" class="grid-element"><img src="../images/eton-bins.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 19vw, (max-width: 1279px) 20vw, 241.78125px" srcset="../images/eton-bins-p-500.jpeg 500w, ../images/eton-bins.jpg 1000w" alt="" class="grid-image-flexible"></div>
       </div>
     </div>
   </div>
@@ -213,8 +213,8 @@
   <div class="section-15 wf-section">
     <div class="container-wide w-container">
       <div class="grid-two-pictures-ww">
-        <div id="w-node-_5f97674d-d716-5dcd-f5cf-122190eb12a8-96f2149a" class="grid-element"><img src="../images/_A0A1961-4.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 44vw, (max-width: 1279px) 45vw, 552px" srcset="../images/_A0A1961-4-p-500.jpeg 500w, ../images/_A0A1961-4-p-1080.jpeg 1080w, ../images/_A0A1961-4.jpg 1500w" alt="" class="grid-image-flexible"></div>
-        <div id="w-node-_5f97674d-d716-5dcd-f5cf-122190eb12aa-96f2149a" class="grid-element"><img src="../images/_A0A1897-6-hochant.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 44vw, (max-width: 1279px) 45vw, 552px" srcset="../images/_A0A1897-6-hochant-p-800.jpeg 800w, ../images/_A0A1897-6-hochant.jpg 1000w" alt="" class="grid-image-flexible"></div>
+        <div id="w-node-_5f97674d-d716-5dcd-f5cf-122190eb12a8-96f2149a" class="grid-element"><img src="../images/eton-blue-aura.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 44vw, (max-width: 1279px) 45vw, 552px" srcset="../images/eton-blue-aura-p-500.jpeg 500w, ../images/eton-blue-aura-p-1080.jpeg 1080w, ../images/eton-blue-aura.jpg 1500w" alt="" class="grid-image-flexible"></div>
+        <div id="w-node-_5f97674d-d716-5dcd-f5cf-122190eb12aa-96f2149a" class="grid-element"><img src="../images/eton-sophie.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 44vw, (max-width: 1279px) 45vw, 552px" srcset="../images/_A0A1897-6-hochant-p-800.jpeg 800w, ../images/eton-sophie.jpg 1000w" alt="" class="grid-image-flexible"></div>
       </div>
     </div>
   </div>
