--- a/projects/healthfiction.html
+++ b/projects/healthfiction.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Dec 19 2022 15:14:16 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Dec 19 2022 18:49:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63a0798c30164e58fef2149b" data-wf-site="63a0798c30164e0ad3f2148b">
 <head>
   <meta charset="utf-8">
@@ -69,7 +69,7 @@
   </div>
   <div class="section-title-photo wf-section">
     <div class="container-2 w-container">
-      <div class="image-wrap-copy"><img src="../images/SHOP-ÜBERSICHT_-mixed-noise2.jpg" loading="lazy" sizes="(max-width: 1279px) 100vw, 1000px" srcset="../images/SHOP-ÜBERSICHT_-mixed-noise2-p-500.jpeg 500w, ../images/SHOP-ÜBERSICHT_-mixed-noise2-p-800.jpeg 800w, ../images/SHOP-ÜBERSICHT_-mixed-noise2.jpg 1920w" alt="" class="image">
+      <div class="image-wrap2"><img src="../images/shop-overview.jpg" loading="lazy" sizes="(max-width: 1279px) 100vw, 1000px" srcset="../images/SHOP-ÜBERSICHT_-mixed-noise2-p-500.jpeg 500w, ../images/SHOP-ÜBERSICHT_-mixed-noise2-p-800.jpeg 800w, ../images/shop-overview.jpg 1920w" alt="" class="image">
         <h1 class="h1-health">Health Fiction 2047</h1>
       </div>
     </div>
@@ -97,7 +97,7 @@
   <div class="section-15 wf-section">
     <div class="container w-container">
       <div class="grid-one-picture-no-margin">
-        <div id="w-node-df6a28d0-8229-759d-9aca-11ff8f00bfb4-fef2149b" class="grid-element"><img src="../images/futures-wheel.png" loading="lazy" sizes="(max-width: 479px) 87vw, 1vw" srcset="../images/futures-wheel-p-500.png 500w, ../images/futures-wheel-p-800.png 800w, ../images/futures-wheel-p-1080.png 1080w, ../images/futures-wheel.png 1800w" alt="" class="image-with-round-border"></div>
+        <div id="w-node-df6a28d0-8229-759d-9aca-11ff8f00bfb4-fef2149b" class="grid-element"><img src="../images/futureswheel.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 991px) 90vw, 840px" srcset="../images/futures-wheel-p-500.png 500w, ../images/futures-wheel-p-800.png 800w, ../images/futures-wheel-p-1080.png 1080w, ../images/futureswheel.png 1800w" alt="" class="image-with-round-border"></div>
       </div>
     </div>
   </div>
@@ -243,14 +243,14 @@
   <div class="section-15 bg-healthgray wf-section">
     <div class="container-wide w-container">
       <div class="grid-one-picture">
-        <div id="w-node-ad1adce5-5ac4-2320-cc39-2092b32a90d9-fef2149b" class="grid-element"><img src="../images/evolution-bact.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 90vw, 100vw" srcset="../images/evolution-bact-p-500.png 500w, ../images/evolution-bact-p-800.png 800w, ../images/evolution-bact-p-1080.png 1080w, ../images/evolution-bact.png 1440w" alt="" class="image-grow-stretch"></div>
+        <div id="w-node-ad1adce5-5ac4-2320-cc39-2092b32a90d9-fef2149b" class="grid-element"><img src="../images/evolution-bact.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 90vw, (max-width: 1279px) 92vw, 1119.9765625px" srcset="../images/evolution-bact-p-500.png 500w, ../images/evolution-bact-p-800.png 800w, ../images/evolution-bact-p-1080.png 1080w, ../images/evolution-bact.png 1440w" alt="" class="image-grow-stretch"></div>
       </div>
     </div>
   </div>
   <div class="section-15 wf-section">
     <div class="container w-container">
       <div class="grid-one-picture">
-        <div id="w-node-_6cdc743d-601e-dfaa-c950-15bb51c91fd6-fef2149b" class="grid-element"><img src="../images/bak2.jpg" loading="lazy" sizes="100vw" srcset="../images/bak2-p-500.jpeg 500w, ../images/bak2.jpg 1500w" alt="" class="image-grow-stretch"></div>
+        <div id="w-node-_6cdc743d-601e-dfaa-c950-15bb51c91fd6-fef2149b" class="grid-element"><img src="../images/bak2.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 991px) 90vw, 839.984375px" srcset="../images/bak2-p-500.jpeg 500w, ../images/bak2.jpg 1500w" alt="" class="image-grow-stretch"></div>
       </div>
     </div>
   </div>
@@ -268,7 +268,7 @@
   <div class="section-15 wf-section">
     <div class="container-wide w-container">
       <div class="grid-four-pictures-wnww">
-        <div id="w-node-_62c6b262-667f-c451-f293-ab126efd4499-fef2149b" class="grid-element"><img src="../images/table-vektor.png" loading="lazy" sizes="(max-width: 479px) 39vw, (max-width: 767px) 24vw, 100vw" srcset="../images/table-vektor-p-500.png 500w, ../images/table-vektor.png 600w" alt="" class="image-grow-stretch"></div>
+        <div id="w-node-_62c6b262-667f-c451-f293-ab126efd4499-fef2149b" class="grid-element"><img src="../images/table-vektor.png" loading="lazy" sizes="(max-width: 479px) 39vw, (max-width: 767px) 24vw, (max-width: 1279px) 25vw, 306.28125px" srcset="../images/table-vektor-p-500.png 500w, ../images/table-vektor.png 600w" alt="" class="image-grow-stretch"></div>
         <div id="w-node-_62c6b262-667f-c451-f293-ab126efd449b-fef2149b" class="grid-element"><img src="../images/table1-3d.png" loading="lazy" sizes="(max-width: 479px) 39vw, (max-width: 1279px) 12vw, 153.140625px" srcset="../images/table1-3d-p-500.png 500w, ../images/table1-3d.png 600w" alt="" class="grid-image-flexible"></div>
         <div id="w-node-aae76433-3dc3-01e7-baab-8c3069baa3eb-fef2149b" class="grid-element"><img src="../images/arrow-health.svg" loading="lazy" alt="" class="image-100"></div>
         <div id="w-node-_62c6b262-667f-c451-f293-ab126efd449d-fef2149b" class="grid-element"><img src="../images/table-2-3d.png" loading="lazy" sizes="(max-width: 479px) 39vw, (max-width: 767px) 24vw, (max-width: 1279px) 25vw, 306.2890625px" srcset="../images/table-2-3d-p-500.png 500w, ../images/table-2-3d.png 600w" alt="" class="grid-image-flexible"></div>
@@ -278,7 +278,7 @@
   <div class="section-15 wf-section">
     <div class="container w-container">
       <div class="grid-one-picture">
-        <div id="w-node-ad371716-aaac-ba06-586e-eb8c8f4412db-fef2149b" class="grid-element"><img src="../images/sitzecke2.jpg" loading="lazy" sizes="100vw" srcset="../images/sitzecke2-p-500.jpeg 500w, ../images/sitzecke2-p-800.jpeg 800w, ../images/sitzecke2.jpg 1500w" alt="" class="image-grow-stretch"></div>
+        <div id="w-node-ad371716-aaac-ba06-586e-eb8c8f4412db-fef2149b" class="grid-element"><img src="../images/sitzecke2.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 991px) 90vw, 839.984375px" srcset="../images/sitzecke2-p-500.jpeg 500w, ../images/sitzecke2-p-800.jpeg 800w, ../images/sitzecke2.jpg 1500w" alt="" class="image-grow-stretch"></div>
       </div>
     </div>
   </div>
