--- a/projects/letscleartheair.html
+++ b/projects/letscleartheair.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Dec 19 2022 15:14:16 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Dec 19 2022 18:49:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63a0798c30164eca1af2149d" data-wf-site="63a0798c30164e0ad3f2148b">
 <head>
   <meta charset="utf-8">
@@ -69,7 +69,7 @@
   </div>
   <div class="section-title-photo wf-section">
     <div class="container-2 w-container">
-      <div class="image-wrap-copy"><img src="../images/Mask-Group.png" loading="lazy" sizes="(max-width: 1279px) 100vw, 1000px" srcset="../images/Mask-Group-p-500.png 500w, ../images/Mask-Group-p-800.png 800w, ../images/Mask-Group-p-1080.png 1080w, ../images/Mask-Group.png 1251w" alt="" class="image">
+      <div class="image-wrap2"><img src="../images/Mask-Group.png" loading="lazy" sizes="(max-width: 1279px) 100vw, 1000px" srcset="../images/Mask-Group-p-500.png 500w, ../images/Mask-Group-p-800.png 800w, ../images/Mask-Group-p-1080.png 1080w, ../images/Mask-Group.png 1251w" alt="" class="image">
         <h1 class="h1-klima">Let’s Clear the Air</h1>
       </div>
     </div>
@@ -107,9 +107,9 @@
   <div class="section-15 bg-white wf-section">
     <div class="container-wide w-container">
       <div class="grid-three-pictures-www">
-        <div id="w-node-_6be897f0-3eba-d798-b32d-addc32ee58c5-1af2149d" class="grid-element"><img src="../images/verfahren-2.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 90vw, 100vw" srcset="../images/verfahren-2-p-500.jpeg 500w, ../images/verfahren-2-p-800.jpeg 800w, ../images/verfahren-2.jpg 1000w" alt="" class="image-grow-stretch"></div>
-        <div id="w-node-_6be897f0-3eba-d798-b32d-addc32ee58c7-1af2149d" class="grid-element"><img src="../images/verfahren.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 90vw, 100vw" srcset="../images/verfahren-p-500.jpeg 500w, ../images/verfahren-p-800.jpeg 800w, ../images/verfahren.jpg 1000w" alt="" class="image-grow-stretch"></div>
-        <div id="w-node-_6be897f0-3eba-d798-b32d-addc32ee58c9-1af2149d" class="grid-element"><img src="../images/potential-and-risks.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 90vw, 100vw" srcset="../images/potential-and-risks-p-500.jpeg 500w, ../images/potential-and-risks-p-800.jpeg 800w, ../images/potential-and-risks.jpg 1000w" alt="" class="image-grow-stretch"></div>
+        <div id="w-node-_6be897f0-3eba-d798-b32d-addc32ee58c5-1af2149d" class="grid-element"><img src="../images/verfahren-2.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 90vw, (max-width: 1279px) 30vw, 362.6640625px" srcset="../images/verfahren-2-p-500.jpeg 500w, ../images/verfahren-2-p-800.jpeg 800w, ../images/verfahren-2.jpg 1000w" alt="" class="image-grow-stretch"></div>
+        <div id="w-node-_6be897f0-3eba-d798-b32d-addc32ee58c7-1af2149d" class="grid-element"><img src="../images/verfahren.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 90vw, (max-width: 1279px) 30vw, 362.6640625px" srcset="../images/verfahren-p-500.jpeg 500w, ../images/verfahren-p-800.jpeg 800w, ../images/verfahren.jpg 1000w" alt="" class="image-grow-stretch"></div>
+        <div id="w-node-_6be897f0-3eba-d798-b32d-addc32ee58c9-1af2149d" class="grid-element"><img src="../images/potential-and-risks.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 90vw, (max-width: 1279px) 30vw, 362.6640625px" srcset="../images/potential-and-risks-p-500.jpeg 500w, ../images/potential-and-risks-p-800.jpeg 800w, ../images/potential-and-risks.jpg 1000w" alt="" class="image-grow-stretch"></div>
       </div>
     </div>
   </div>
@@ -132,7 +132,7 @@
         <div id="w-node-_108aa39b-d34c-1def-7eca-2fd7b8a17686-1af2149d" class="grid-element"><img src="../images/Xplain-Plastik-2.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 34vw, (max-width: 1279px) 35vw, 431.1953125px" srcset="../images/Xplain-Plastik-2-p-500.png 500w, ../images/Xplain-Plastik-2.png 1000w" alt="" class="grid-image-flexible"></div>
         <div id="w-node-_108aa39b-d34c-1def-7eca-2fd7b8a17688-1af2149d" class="grid-element"><img src="../images/SCREEN-1.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 25vw, (max-width: 1279px) 26vw, 323.3984375px" srcset="../images/SCREEN-1-p-500.png 500w, ../images/SCREEN-1.png 1250w" alt="" class="grid-image-flexible"></div>
         <div id="w-node-_108aa39b-d34c-1def-7eca-2fd7b8a1768a-1af2149d" class="grid-element"><img src="../images/Carbon-Capture-Tiles.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 17vw, (max-width: 1279px) 18vw, 215.6015625px" srcset="../images/Carbon-Capture-Tiles-p-500.png 500w, ../images/Carbon-Capture-Tiles.png 750w" alt="" class="image-77"></div>
-        <div id="w-node-_108aa39b-d34c-1def-7eca-2fd7b8a1768c-1af2149d" class="grid-element"><img src="../images/Carbon-Capture-erklärt.png" loading="lazy" sizes="100vw" srcset="../images/Carbon-Capture-erklärt-p-500.png 500w, ../images/Carbon-Capture-erklärt.png 750w" alt="" class="image-76"></div>
+        <div id="w-node-_108aa39b-d34c-1def-7eca-2fd7b8a1768c-1af2149d" class="grid-element"><img src="../images/Carbon-Capture-explained.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 8vw, (max-width: 1279px) 9vw, 107.8046875px" srcset="../images/Carbon-Capture-erklärt-p-500.png 500w, ../images/Carbon-Capture-explained.png 750w" alt="" class="image-76"></div>
         <div id="w-node-_074d42ab-386b-524f-00a6-2f6285de22f7-1af2149d" class="grid-element"><img src="../images/Group-587.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 767px) 34vw, (max-width: 1279px) 35vw, 431.1953125px" srcset="../images/Group-587-p-500.png 500w, ../images/Group-587-p-800.png 800w, ../images/Group-587.png 1562w" alt="" class="grid-image-flexible"></div>
       </div>
     </div>
@@ -150,7 +150,7 @@
   <div class="section-15 wf-section">
     <div class="container-wide w-container">
       <div class="grid-one-picture-copy">
-        <div id="w-node-e061fe29-6820-b42f-9b71-6a6e97333bc8-1af2149d" class="grid-element-left"><img src="../images/story-flow.svg" loading="lazy" alt="" class="sotry-flow-img"><img src="../images/story-flow.png" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 90vw, 100vw" srcset="../images/story-flow-p-500.png 500w, ../images/story-flow-p-800.png 800w, ../images/story-flow.png 2264w" alt="" class="image-grow-stretch"></div>
+        <div id="w-node-e061fe29-6820-b42f-9b71-6a6e97333bc8-1af2149d" class="grid-element-left"><img src="../images/story-flow.svg" loading="lazy" alt="" class="sotry-flow-img"><img src="../images/story-flow.png" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 90vw, (max-width: 1279px) 92vw, 1119.9921875px" srcset="../images/story-flow-p-500.png 500w, ../images/story-flow-p-800.png 800w, ../images/story-flow.png 2264w" alt="" class="image-grow-stretch"></div>
       </div>
     </div>
   </div>
@@ -184,7 +184,7 @@
         <div id="w-node-_9748188a-3e03-1ced-bdd0-bd477103155b-1af2149d" class="grid-element"><img src="../images/Frame-44.jpg" loading="lazy" sizes="(max-width: 479px) 9vw, (max-width: 767px) 14vw, (max-width: 1279px) 15vw, 178.671875px" srcset="../images/Frame-44-p-500.jpeg 500w, ../images/Frame-44-p-1080.jpeg 1080w, ../images/Frame-44.jpg 1500w" alt="" class="image-78"></div>
         <div id="w-node-_9748188a-3e03-1ced-bdd0-bd477103155d-1af2149d" class="grid-element"><img src="../images/Floating-in-da-Carbonate-Loop.jpg" loading="lazy" sizes="(max-width: 479px) 9vw, (max-width: 767px) 14vw, (max-width: 1279px) 15vw, 178.6640625px" srcset="../images/Floating-in-da-Carbonate-Loop-p-500.jpeg 500w, ../images/Floating-in-da-Carbonate-Loop.jpg 1500w" alt="" class="image-79"></div>
         <div id="w-node-_9748188a-3e03-1ced-bdd0-bd477103155f-1af2149d" class="grid-element"><img src="../images/Scroll-Diagram.jpg" loading="lazy" sizes="(max-width: 479px) 22vw, (max-width: 767px) 28vw, (max-width: 1279px) 29vw, 357.3359375px" srcset="../images/Scroll-Diagram-p-500.jpeg 500w, ../images/Scroll-Diagram-p-800.jpeg 800w, ../images/Scroll-Diagram.jpg 1000w" alt="" class="image-80"></div>
-        <div id="w-node-_9748188a-3e03-1ced-bdd0-bd4771031561-1af2149d" class="grid-element"><img src="../images/Xplain-Plastik-3.jpg" loading="lazy" sizes="(max-width: 479px) 22vw, (max-width: 767px) 28vw, (max-width: 1279px) 100vw, 357.328125px" srcset="../images/Xplain-Plastik-3-p-500.jpeg 500w, ../images/Xplain-Plastik-3-p-800.jpeg 800w, ../images/Xplain-Plastik-3.jpg 1000w" alt="" class="image-81"></div>
+        <div id="w-node-_9748188a-3e03-1ced-bdd0-bd4771031561-1af2149d" class="grid-element"><img src="../images/Xplain-Plastik-3.jpg" loading="lazy" sizes="(max-width: 479px) 22vw, (max-width: 767px) 28vw, (max-width: 1279px) 29vw, 357.328125px" srcset="../images/Xplain-Plastik-3-p-500.jpeg 500w, ../images/Xplain-Plastik-3-p-800.jpeg 800w, ../images/Xplain-Plastik-3.jpg 1000w" alt="" class="image-81"></div>
         <div id="w-node-_72b5f2c1-33b7-3e95-f543-6867d88f5183-1af2149d" class="grid-element"><img src="../images/postcombustion.jpg" loading="lazy" sizes="(max-width: 479px) 9vw, (max-width: 767px) 14vw, (max-width: 1279px) 15vw, 178.671875px" srcset="../images/postcombustion-p-500.jpeg 500w, ../images/postcombustion-p-800.jpeg 800w, ../images/postcombustion.jpg 1000w" alt="" class="image-82"></div>
       </div>
     </div>
@@ -225,10 +225,10 @@
     </div>
   </div>
   <div class="section-15 wf-section">
-    <div class="container-wide w-container">
+    <div class="w-container">
       <div class="flex-five-pictures-nn-nnn">
-        <div id="w-node-daa738c6-0ba1-d528-8133-e49ab43b0c5a-1af2149d" class="grid-element-4"><img src="../images/Group-632-crunch.png" loading="lazy" sizes="100vw" srcset="../images/Group-632-crunch-p-500.png 500w, ../images/Group-632-crunch.png 1020w" alt=""></div>
-        <div class="grid-element-4"><img src="../images/Group-631-crunch.png" loading="lazy" alt="" class="image-93"></div>
+        <div id="w-node-daa738c6-0ba1-d528-8133-e49ab43b0c5a-1af2149d" class="grid-element-4"><img src="../images/Group-632-crunch.png" loading="lazy" sizes="(max-width: 479px) 95vw, (max-width: 767px) 33vw, (max-width: 991px) 240.2265625px, (max-width: 1279px) 310.1875px, 313.328125px" srcset="../images/Group-632-crunch-p-500.png 500w, ../images/Group-632-crunch.png 1020w" alt=""></div>
+        <div class="grid-element-4"><img src="../images/Group-631.png" loading="lazy" alt="" class="image-93"></div>
         <div class="grid-element-4"><img src="../images/Fuel-1.png" loading="lazy" alt="" class="image-94"></div>
       </div>
     </div>
@@ -265,7 +265,7 @@
   <div class="section-15 wf-section">
     <div class="container w-container">
       <div class="grid-one-picture-no-margin-copy">
-        <div id="w-node-_17c13a44-74fd-5ee2-08e2-662b15e73ead-1af2149d" class="grid-element-copy2"><img src="../images/klima-landing.png" loading="lazy" sizes="1vw" srcset="../images/klima-landing-p-500.png 500w, ../images/klima-landing-p-800.png 800w, ../images/klima-landing.png 1440w" alt="" class="image-with-round-border-klima">
+        <div id="w-node-_17c13a44-74fd-5ee2-08e2-662b15e73ead-1af2149d" class="grid-element-copy2"><img src="../images/klimalanding.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 991px) 90vw, 840px" srcset="../images/klima-landing-p-500.png 500w, ../images/klima-landing-p-800.png 800w, ../images/klimalanding.png 1440w" alt="" class="image-with-round-border-klima">
           <a href="https://interface.fh-potsdam.de/klimagrafik/cdr/" target="_blank" class="button-klima-extern w-button">Check out the final website ↗</a>
         </div>
       </div>
