--- a/projects/periodeux.html
+++ b/projects/periodeux.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Dec 19 2022 15:14:16 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Dec 19 2022 18:49:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63a0798c30164eecd2f2149e" data-wf-site="63a0798c30164e0ad3f2148b">
 <head>
   <meta charset="utf-8">
@@ -69,7 +69,7 @@
   </div>
   <div class="section-title-photo wf-section">
     <div class="container-2 w-container">
-      <div class="image-wrap-copy"><img src="../images/title-periodeux.png" loading="lazy" sizes="(max-width: 1279px) 100vw, 1000px" srcset="../images/title-periodeux-p-500.png 500w, ../images/title-periodeux-p-800.png 800w, ../images/title-periodeux-p-1080.png 1080w, ../images/title-periodeux.png 2315w" alt="" class="image">
+      <div class="image-wrap2"><img src="../images/title-periodeux.png" loading="lazy" sizes="(max-width: 1279px) 100vw, 1000px" srcset="../images/title-periodeux-p-500.png 500w, ../images/title-periodeux-p-800.png 800w, ../images/title-periodeux-p-1080.png 1080w, ../images/title-periodeux.png 2315w" alt="" class="image">
         <h1 class="h1-periodeux">Periodeux</h1>
       </div>
     </div>
@@ -146,7 +146,7 @@
   <div class="section-15 wf-section">
     <div class="container w-container">
       <div class="grid-one-picture-no-margin">
-        <div id="w-node-_1cc6944b-dc3f-e057-3baa-d22a53dea967-d2f2149e" class="grid-element"><img src="../images/calendar-view.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 991px) 90vw, 840px" srcset="../images/calendar-view-p-500.png 500w, ../images/calendar-view-p-800.png 800w, ../images/calendar-view.png 1868w" alt="" class="image-with-round-border"></div>
+        <div id="w-node-_1cc6944b-dc3f-e057-3baa-d22a53dea967-d2f2149e" class="grid-element"><img src="../images/calendar-view.png" loading="lazy" sizes="(max-width: 479px) 87vw, 1vw" srcset="../images/calendar-view-p-500.png 500w, ../images/calendar-view-p-800.png 800w, ../images/calendar-view.png 1868w" alt="" class="image-with-round-border"></div>
       </div>
     </div>
   </div>
@@ -162,7 +162,7 @@
   <div class="section-15 wf-section">
     <div class="container w-container">
       <div class="grid-one-picture-no-margin">
-        <div id="w-node-_76d372cd-3bc1-65bf-f24a-32bc822c71ab-d2f2149e" class="grid-element"><img src="../images/diary-view.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 991px) 90vw, 840px" srcset="../images/diary-view-p-500.png 500w, ../images/diary-view-p-800.png 800w, ../images/diary-view.png 1868w" alt="" class="image-with-round-border"></div>
+        <div id="w-node-_76d372cd-3bc1-65bf-f24a-32bc822c71ab-d2f2149e" class="grid-element"><img src="../images/diary-view.png" loading="lazy" sizes="(max-width: 479px) 87vw, 1vw" srcset="../images/diary-view-p-500.png 500w, ../images/diary-view-p-800.png 800w, ../images/diary-view.png 1868w" alt="" class="image-with-round-border"></div>
       </div>
     </div>
   </div>
@@ -178,7 +178,7 @@
   <div class="section-15 wf-section">
     <div class="container w-container">
       <div class="grid-one-picture-no-margin">
-        <div id="w-node-f83aad5e-9745-9df4-5132-bc226115825a-d2f2149e" class="grid-element"><img src="../images/insights-view.png" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 991px) 90vw, 840px" srcset="../images/insights-view-p-500.png 500w, ../images/insights-view-p-800.png 800w, ../images/insights-view.png 1868w" alt="" class="image-with-round-border"></div>
+        <div id="w-node-f83aad5e-9745-9df4-5132-bc226115825a-d2f2149e" class="grid-element"><img src="../images/insights-view.png" loading="lazy" sizes="(max-width: 479px) 87vw, 1vw" srcset="../images/insights-view-p-500.png 500w, ../images/insights-view-p-800.png 800w, ../images/insights-view.png 1868w" alt="" class="image-with-round-border"></div>
       </div>
     </div>
   </div>
@@ -213,7 +213,7 @@
   <div class="section-15 wf-section">
     <div class="container w-container">
       <div class="grid-one-picture-no-margin">
-        <div id="w-node-_699db1eb-018d-036c-c8f6-e65bc91c8321-d2f2149e" class="grid-element"><img src="../images/Periodeux_Icons.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 991px) 90vw, 840px" srcset="../images/Periodeux_Icons-p-800.jpeg 800w, ../images/Periodeux_Icons-p-1080.jpeg 1080w, ../images/Periodeux_Icons.jpg 1500w" alt="" class="image-with-round-border"></div>
+        <div id="w-node-_699db1eb-018d-036c-c8f6-e65bc91c8321-d2f2149e" class="grid-element"><img src="../images/Periodeux_Icons.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, 1vw" srcset="../images/Periodeux_Icons-p-800.jpeg 800w, ../images/Periodeux_Icons-p-1080.jpeg 1080w, ../images/Periodeux_Icons.jpg 1500w" alt="" class="image-with-round-border"></div>
       </div>
     </div>
   </div>
@@ -230,7 +230,7 @@
   <div class="section-15 wf-section">
     <div class="container w-container">
       <div class="grid-one-picture-no-margin">
-        <div id="w-node-_6bb3824d-652f-5b86-fead-3a18ff2a5c13-d2f2149e" class="grid-element"><img src="../images/code.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, (max-width: 991px) 90vw, 840px" srcset="../images/code-p-500.jpeg 500w, ../images/code-p-800.jpeg 800w, ../images/code-p-1080.jpeg 1080w, ../images/code.jpg 1500w" alt="" class="image-with-round-border"></div>
+        <div id="w-node-_6bb3824d-652f-5b86-fead-3a18ff2a5c13-d2f2149e" class="grid-element"><img src="../images/code.jpg" loading="lazy" sizes="(max-width: 479px) 87vw, 1vw" srcset="../images/code-p-500.jpeg 500w, ../images/code-p-800.jpeg 800w, ../images/code-p-1080.jpeg 1080w, ../images/code.jpg 1500w" alt="" class="image-with-round-border"></div>
       </div>
     </div>
   </div>
